# MusicalBox

./: .gitignore  README.md
blender/: README.md  musical_box.blend  musical_box.stl  musical_box_camberwick_green_1.stl  musical_box_camberwick_green_2.stl  musical_box_camberwick_green_3.stl  musical_box_camberwick_green_final.stl  musical_box_exercises.stl  musical_box_scale_1.stl
gearotic/: README.md  small.stl
music/: README.md  musical_box_camberwick_green_2.txt  musical_box_camberwick_green_3.txt  musical_box_camberwick_green_final.txt  musical_box_exercises.txt  plinky_plonky_strip_maker.py
software/: README.md
software/esp32/stepper/: CMakeLists.txt  README.md  sdkconfig
software/esp32/stepper/main/: CMakeLists.txt  Kconfig.projbuild  log.c  log.h  network.c  network.h  ota.c  ota.h  ping.c  ping.h  stepper.c  tmc2209.c  tmc2209.h
software/esp32/stepper/server_certs/: ca_cert.pem
software/pi/: README.md  binary_file_version.py  control_server.py  esp32_server.py  https_server.py  log_server.py  musical_box_manager.py  pi_read_only_file_system.md  pi_wifi_ap.md  pi_wifi_dhcp_mac.md  stepper.py  web_server.py
software/protocol/: README.md  generate_python_protocol_module.py  protocol.h  protocol.py
